# dingdone

./: LICENSE  README.md  pyproject.toml
src/dingdone/: __main__.py  main.py
